# acorn_sim

./: .gitignore  .gitmodules  README.md
.github/workflows/: ci.yml  pages.yml
docker/: docker-compose.yaml  run_sim_docker.sh
docker/dockerfile/: Dockerfile  entrypoint.sh
docker/package-setup/: setup_simulation.sh
docs/: _config.yml  index.md
docs/_site/: index.html
docs/_site/Jamboard/: index.html
docs/_site/docs/: Simulation.html  software_bringup.html  systems_setup.html
docs/_site/intro/: index.html
docs/docs/: Intro.md  JamBoard.md
docs/docs/Simulation/: Simulation.md  acorn_urdf_diff_drive.md  baseline_urdf.md  nav2_outdoor_stack.md
documentation/: _config.yml  index.md
documentation/_site/: index.html
documentation/docs/: Intro.md
sim_ws/src/simulation_launch/: CMakeLists.txt  package.xml
sim_ws/src/simulation_launch/description/: robot.urdf.xacro  wheel_module_macro.xacro
sim_ws/src/simulation_launch/launch/: robot_state.launch.py  rsp.launch.py  rviz_test.launch.py  rviz_test_urdf.launch.py  rviz_test_xacro.launch.py  simulation_launch.launch.py
sim_ws/src/simulation_launch/maps/: workspace_0.pgm  workspace_0.yaml
sim_ws/src/simulation_launch/robot_urdfs/acorn_robot/: robot.urdf.xacro  wheel_module_macro.xacro
sim_ws/src/simulation_launch/robots/four_wheeled_robot/: four_wheeled_robot.urdf
sim_ws/src/simulation_launch/rviz/: rviz_config.rviz
sim_ws/src/simulation_launch/worlds/: svd_demo.world  workspace_0.world
wheel_module_FL_ws/src/: acorn_msgs  acron_srvs
wheel_module_FR_ws/src/: acorn_msgs  acron_srvs
(+52 files in other folders)
